# D7047E_Advanced_deep_learning_assignments

./: .gitignore  README.md  pyproject.toml
lab0/: Lab0_Task1_Adam.ipynb  Lab0_Task1_SGD.ipynb  Lab0_Task1_Tanh.ipynb  Lab0_Task_2_1.ipynb  Lab0_Task_2_2.ipynb  task_2_1.ipynb
lab1/: task_1_1_lstm_nn.ipynb  task_1_1_lstm_nn_1m.ipynb  task_1_1_lstm_nn_25k.ipynb  task_1_2_hf_25k.ipynb  task_1_2_transformer.ipynb  task_1_2_transformer_1m.ipynb  task_1_2_transformer_25k.ipynb  task_1_3.ipynb  task_1_3_1m.ipynb  task_1_3_25k.ipynb
lab1/data/: amazon_cells_labelled_LARGE_25K.txt
lab1/model/: 25k_bi_lstm.pt  25k_simple_ann.pt  25k_transformer_sentiment.pt  simple_ann.pt  transformer_sentiment.pt  vocab.pkl
lab1/model/25k_hf_transformer_sentiment/: config.json
lab1/utils/: data_loading_code.py  preprocessing.py
lab2/: Task1_vanilla_gan.ipynb  Task2_logistic_loss.ipynb  Task3_CGAN.ipynb  Task4_Adversarial_images.ipynb  Task5_diffusion_model.ipynb
lab3/: 02_model_training.ipynb  02b_model_training.ipynb  03_inference_evaluation.ipynb  data.py  data_pipeline_test.ipynb  data_pipeline_test_chris.ipynb  vocab.pth
lab3/runs/captioning/: events.out.tfevents.1778411200.poprafr.25037.0  events.out.tfevents.1778413430.poprafr.44313.0  events.out.tfevents.1778413591.poprafr.45339.0  events.out.tfevents.1778596165.poprafr.19921.0  events.out.tfevents.1778596994.poprafr.26545.0  events.out.tfevents.1778597367.poprafr.29451.0  events.out.tfevents.1778598294.poprafr.36838.0  events.out.tfevents.1778599982.poprafr.51234.0  events.out.tfevents.1778602509.poprafr.71983.0  (+1 more)
(+36 files in other folders)
