[project]
name = "d7047e-advanced-deep-learning-assignments"
version = "0.1.0"
description = "Lab solutions to D7047E"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "wandb>=0.26.1",
]
